# terraform_tutorial

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tf_env_setup.sh
ai_assistant/: config.yaml  main.py
ai_assistant/crawler/: gdrive_reader.py  web_crawler.py
ai_assistant/generator/: __init__.py  optimized_qa.py  qa.py
ai_assistant/retriever/: aisearch_indexer.py  vdb_index.py  vdb_retrieve.py
ai_assistant/utils/: db_utils.py  global_utils.py
notebooks/: chessgo.html  crawler.ipynb  document_ai.ipynb  gt_gen.ipynb  pipeline_trial.ipynb
terraform/: main.tf  terraform.tfvars  variables.tf
terraform/azure/: main.tf  main.tfplan  outputs.tf  providers.tf  variables.tf
