[tool.poetry]
name = "ai_assistant"
version = "0.0.2"
authors = [
    "Anand <anand1911991@outlook.com>",
]
description = "Template repo for building GenAI applications"
readme = "README.md"
repository = "https://github.com/Anand191/terraform_tutorial.git"
packages = [
    {include = "ai_assistant"}
]
exclude = ["tests*"]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
pandas = "^2.2.2"
pandera = "^0.20.4"
numpy = "^1.26.4"
loguru = "^0.7.2"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
functions-framework = "3.3.0"
openpyxl = "^3.1.2" # used by the logging library
tqdm = "^4.66.5"
sentence-transformers = "^2.4.0"
transformers = "^4.44.2"
datasets = "^2.14.7"
lightning = "^2.4.0"
torchmetrics = "^1.4.1"
redis = "^5.0.8"
chromadb = "^0.5.5"
openai = "^1.44.0"
dspy-ai = "^2.4.14"
langchain = "^0.2.16"
langchain-core = "^0.2.38"
langchain-openai = "^0.1.23"
langchain-google-vertexai = "^1.0.10"
langchain-community = "^0.2.16"
ragas = "^0.1.16"
fastapi = "^0.114.0"
uvicorn = "^0.29.0"
pypdf2 = "^3.0.1"
geopy = "^2.4.1"
typer = "^0.12.5"
google-auth = "^2.34.0"
google-cloud-discoveryengine = "^0.12.2"
googleapis-common-protos = "^1.65.0"
vertexai = "^1.65.0"
azure-identity = "^1.17.1"
azure-keyvault = "^4.2.0"
opentelemetry-exporter-otlp-proto-grpc = "1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-mock = "^3.14.0"
joblib = "^1.4.2"
pylint = "^3.2.7"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
deptry = "^0.20.0"
ruff = "^0.6.4"

[tool.poetry.group.experimentation.dependencies]
jupyterlab = "^4.2.5"
tabulate = "^0.9.0"
ipywidgets = "^8.1.5"
google-cloud-aiplatform = "^1.65.0"
google-cloud-documentai = "^2.31.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
spacy = "^3.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers -m 'not integration and not redis'"
markers = [
    "integration: mark test as integration test" ,
    "redis: mark test as redis based"
]

[tool.deptry]
ignore = ["DEP004"]
ignore_notebooks = true
extend_exclude = ["src"]

[tool.deptry.per_rule_ignores]
DEP002 = ["openpyxl"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "models",
    "data",
    "notebooks",
    "logs",
    "assets",
    # this is only temporary
    "src"
]

line-length = 110
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
